@@ -38,15 +38,16 @@ mledist <- function (data, distr, start=NULL, fix.arg=NULL, optim.method="defaul
     if (!exists(ddistname, mode="function"))
         stop(paste("The ", ddistname, " function must be defined"))
 
-    if (!is.null(fix.arg) & is.null(start))
-        stop("Starting values must be defined when some distribution parameters are fixed")
+    start.arg <- start #to avoid confusion with the start() function of stats pkg (check is done lines 87-100)
+    #if (!is.null(fix.arg) & is.null(start))
+    #    stop("Starting values must be defined when some distribution parameters are fixed")
     
     txt1 <- "data must be a numeric vector of length greater than 1 for non censored data"
     txt2 <- "or a dataframe with two columns named left and right and more than one line for censored data"
     if(!is.null(weights))
     {
       if(any(weights < 0))
-        stop("weights should be a vector of numeric greater than 1.")
+        stop("weights should be a vector of numerics greater than 1.")
       if(length(weights) != NROW(data))
         stop("weights should be a vector with a length equal to the observation number.")
     }
@@ -83,82 +84,21 @@ mledist <- function (data, distr, start=NULL, fix.arg=NULL, optim.method="defaul
         data<-c(rcens, lcens, ncens, (icens$left+icens$right)/2)
     }
     
-    # MLE fit 
-    # definition of starting values if not previously defined
-    if (is.null(start)) {
-        if (distname == "norm") {
-            n <- length(data)
-            sd0 <- sqrt((n - 1)/n) * sd(data)
-            mx <- mean(data)
-            start <- list(mean=mx, sd=sd0)
-        }
-        if (distname == "lnorm") {
-            if (any(data <= 0)) 
-                stop("values must be positive to fit a lognormal distribution")
-            n <- length(data)
-            ldata <- log(data)
-            sd0 <- sqrt((n - 1)/n) * sd(ldata)
-            ml <- mean(ldata)
-            start <- list(meanlog=ml, sdlog=sd0)
-        }
-        if (distname == "pois") {
-            start <- list(lambda=mean(data))
-        }
-        if (distname == "exp") {
-            start <- list(rate=1/mean(data))
-        }
-        if (distname == "gamma") {
-            n <- length(data)
-            m <- mean(data)
-            v <- (n - 1)/n*var(data)
-            start <- list(shape=m^2/v, rate=m/v)
-        }
-        if (distname == "nbinom") {
-            n <- length(data)
-            m <- mean(data)
-            v <- (n - 1)/n*var(data)
-            size <- if (v > m) m^2/(v - m)
-                else 100
-            start <- list(size = size, mu = m) 
-        }
-        if (distname == "geom" ) {
-            m <- mean(data)
-            prob <- if (m>0) 1/(1+m)
-                    else 1
-            start <- list(prob=prob)        
-        }
-        if (distname == "beta") {
-            if (any(data < 0) | any(data > 1)) 
-                stop("values must be in [0-1] to fit a beta distribution")
-            n <- length(data)
-            m <- mean(data)
-            v <- (n - 1)/n*var(data)
-            aux <- m*(1-m)/v - 1
-            start <- list(shape1=m*aux, shape2=(1-m)*aux)
-        }
-        if (distname == "weibull") {
-            m <- mean(log(data))
-            v <- var(log(data))
-            shape <- 1.2/sqrt(v)
-            scale <- exp(m + 0.572/shape)
-            start <- list(shape = shape, scale = scale)
-        }
-        if (distname == "logis") {
-            n <- length(data)
-            m <- mean(data)
-            v <- (n - 1)/n*var(data)
-            start <- list(location=m, scale=sqrt(3*v)/pi)
-        }
-        if (distname == "cauchy") {
-            start <- list(location=median(data), scale=IQR(data)/2)
-        }
-        if (distname == "unif"){
-            start <- list(min=0, max=1)
-        }
-
-        if (!is.list(start)) 
-            stop("'start' must be defined as a named list for this distribution") 
-   } # end of the definition of starting values     
+    # definition of starting/fixed values values
+    argddistname <- names(formals(ddistname))
+    chfixstt <- checkparam(start.arg=start.arg, fix.arg=fix.arg, argdistname=argddistname, 
+                           errtxt=NULL, data10=head(data, 10), distname=distname)
+    if(!chfixstt$ok)
+      stop(chfixstt$txt)
+    if(is.function(chfixstt$start.arg))
+      vstart <- chfixstt$start.arg(data)
+    else
+      vstart <- unlist(chfixstt$start.arg)
+    if(is.function(fix.arg)) #function
+      fix.arg <- fix.arg(data)
+    #otherwise fix.arg is a named list
+    
+    # end of the definition of starting/fixed values   
     
     ############# closed formula for uniform distribution ##########
     if(distname == "unif")
@@ -171,20 +111,6 @@ mledist <- function (data, distr, start=NULL, fix.arg=NULL, optim.method="defaul
     
    
     ############# MLE fit using optim or custom.optim ##########
-    vstart <- unlist(start)
-    vfix.arg <- unlist(fix.arg)
-    # check of the names of the arguments of the density function
-    argddistname <- names(formals(ddistname))   
-    m <- match(names(start), argddistname)
-    mfix <- match(names(vfix.arg), argddistname)
-    if (any(is.na(m)) || length(m) == 0)
-        stop("'start' must specify names which are arguments to 'distr'")
-    if (any(is.na(mfix)))
-        stop("'fix.arg' must specify names which are arguments to 'distr'")
-    # check that some parameters are not both in fix.arg and start
-    minter <- match(names(start), names(fix.arg))
-    if (any(!is.na(minter)))
-        stop("a distribution parameter cannot be specified both in 'start' and 'fix.arg'")
 
     # definition of the function to minimize : - log likelihood
     # for non censored data
